添加定时任务，每天凌晨5点自动执行判断是否缺勤