@@ -28,7 +28,7 @@
     </scm>
     <properties>
         <java.version>21</java.version>
-        <lombok.version>1.18.36</lombok.version>
+        <lombok.version>1.18.38</lombok.version>
         <mockito.version>5.14.2</mockito.version>
     </properties>
     <dependencies>
@@ -177,6 +177,7 @@
                         -XX:+EnableDynamicAgentLoading
                         --enable-native-access=ALL-UNNAMED
                         -Xshare:off
+                        -Dnet.bytebuddy.experimental=true
                     </argLine>
                 </configuration>
             </plugin>
